--- a/styles/style.css
+++ b/styles/style.css
@@ -420,7 +420,7 @@ main {
 /* section .search-hotel */
 
 .search-hotel {
-  margin: 0 0 96px 0;
+  margin: 0 0 50px 0;
 }
 
 .search-hotel-first-p {
@@ -529,10 +529,8 @@ input[type="email"]::placeholder {
   background-image: url(../images/search-background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-
   color: #fff;
-
-  margin-bottom: 50px;
+  padding: 35px 0 0 0;
 }
 
 .content-wrapper {
@@ -558,6 +556,8 @@ input[type="email"]::placeholder {
 .breadcrumbs-item {
   display: flex;
   align-items: center;
+  font-size: 16px;
+  line-height: 21px;
 }
 
 .breadcrumbs-item:not(:last-child)::after {
@@ -826,7 +826,7 @@ input[type="email"]::placeholder {
 .sorting-wrapper {
   display: flex;
   align-items: center;
-  margin: 0 0 32px 0;
+  margin: 0 0 40px 0;
 }
 
 .searching-results-quantity {
@@ -841,6 +841,7 @@ input[type="email"]::placeholder {
 /* select */
 
 .select-control {
+  font-family: PT Sans;
   font-size: 18px;
   line-height: 21px;
   color: #333;
@@ -854,6 +855,7 @@ input[type="email"]::placeholder {
   cursor: pointer;
   outline: none;
   z-index: 1;
+  height: 49px;
 }
 
 .select-control:hover,
@@ -927,10 +929,10 @@ input[type="email"]::placeholder {
 .hotel-list {
   list-style: none;
   padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0 0 20px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  gap: 20px;
+  margin: 0 0 40px 0;
 }
 
 .hotel-card {
@@ -938,10 +940,9 @@ input[type="email"]::placeholder {
   grid-template-columns: 140px 140px;
   column-gap: 20px;
   row-gap: 16px;
-  border: 1px solid #E6E6E6;
+  box-shadow: 0 0 0 1px #E6E6E6;
   border-radius: 4px;
   padding: 20px;
-  margin: 0 0 20px 0;
 }
 
 .hotel-card-link {
@@ -981,12 +982,12 @@ input[type="email"]::placeholder {
 }
 
 .hotel-information {
-  display: inline-block;
+  padding: 8px 0;
 }
 
 .add-to-favorites {
   background-color: #82b3d3;
-  padding: 8px 20px;
+  padding: 8px 0;
 }
 
 .add-to-favorites:hover,
@@ -1006,12 +1007,34 @@ input[type="email"]::placeholder {
 
 .rating-stars {
   display: block;
+}
+
+.four-stars {
   background-image: url(../images/rating-star.svg),
   url(../images/rating-star.svg),
   url(../images/rating-star.svg),
   url(../images/rating-star.svg);
   background-repeat: no-repeat;
   background-position: 0 0, 24px 0, 48px 0, 72px 0;
+  background-position-y: center;
+}
+
+.three-stars {
+  background-image: url(../images/rating-star.svg),
+  url(../images/rating-star.svg),
+  url(../images/rating-star.svg);
+
+  background-repeat: no-repeat;
+  background-position: 0 0, 24px 0, 48px 0;
+  background-position-y: center;
+}
+
+.two-stars {
+  background-image: url(../images/rating-star.svg),
+  url(../images/rating-star.svg);
+
+  background-repeat: no-repeat;
+  background-position: 0 0, 24px 0;
   background-position-y: center;
 }
 
@@ -1037,10 +1060,13 @@ input[type="email"]::placeholder {
 }
 
 
+
+/* pagination */
+
 .pagination-list {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 60px 0;
   display: flex;
   flex-wrap: wrap;
 }
@@ -1109,6 +1135,7 @@ input[type="email"]::placeholder {
   padding: 0;
 }
 
+
 /* footer */
 
 .main-footer {
@@ -1128,8 +1155,6 @@ input[type="email"]::placeholder {
 
 .social {
   min-width: 142px;
-  display: flex;
-  align-items: center;
 }
 
 .social-list {
@@ -1138,13 +1163,12 @@ input[type="email"]::placeholder {
   margin: 0;
   display: flex;
   justify-content: space-around;
-  flex-grow: 1;
+
 }
 
-.social-list-item {
-  display: flex;
-  align-items: center;
-  padding: 0 10px;
+
+.social-link {
+  padding: 6px 10px;
 }
 
 .social-list-item img {
