--- a/styles/style.css
+++ b/styles/style.css
@@ -1119,7 +1119,7 @@ input[type="email"]::placeholder {
 .hotel-card {
   display: grid;
   grid-template-columns: 140px 140px;
-
+  grid-template-rows: 212px 1fr;
   column-gap: 20px;
   row-gap: 16px;
   box-shadow: 0 0 0 1px #E6E6E6;
