--- a/styles/style.css
+++ b/styles/style.css
@@ -74,18 +74,12 @@ main {
   text-transform: uppercase;
   text-align: center;
   color: #fff;
-
   background-color: #756157;
-
   display: block;
-
   box-sizing: border-box;
-
   border: 0;
   border-radius: 4px;
-
   padding: 8px 26px;
-
   outline: none;
 }
 
@@ -651,8 +645,23 @@ input[type="email"]::placeholder {
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 50%;
-  border: 0;
+  border: 3px solid #fff;
   cursor: pointer;
+}
+
+.modal-close-button:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close-button:focus {
+  border: 3px solid #83B3D3;
+  outline: none;
+  background-color: #e6e6e6;
+}
+
+.modal-close-button:active {
+  border: 3px solid #fff;
+  opacity: 0.3;
 }
 
 /* section .modal-content */
@@ -673,14 +682,81 @@ input[type="email"]::placeholder {
   text-transform: capitalize;
 }
 
+.modal-form-fildset {
+  padding: 0;
+  border: 0;
+  margin: 0;
+}
+
 .arrival-departure-list,
 .hotel-guests-list {
   margin: 0;
   list-style: none;
+  padding: 0;
+}
+
+.arrival-departure {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 700;
+  color: #000;
+  background-color: #f2f2f2;
+  outline: none;
+  padding: 12px 20px;
+  width: 440px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  border: 3px solid #fff;
+}
+
+.modal-form input:focus {
+  border: 3px solid #83B3D3;
+}
+
+.arrival-departure-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 
+.hotel-guests-list {
+  display: flex;
+}
 
+.hotel-guests-item {
+  display: flex;
+}
+
+.hotel-guests-item-wrapper {
+  display: grid;
+  width: 110px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.hotel-guests-item-wrapper button {
+  padding: 14px 10px;
+}
+
+.guests {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+  font-style: normal;
+  font-weight: 700;
+  color: #000;
+  background-color: #f2f2f2;
+  outline: none;
+  padding: 14px 10px;
+  /* Доделать ширину формы */
+  width: 35px;
+
+  border-radius: 4px;
+  box-sizing: border-box;
+  border: 3px solid #fff;
+}
 
 /* main (catalog) */
 
@@ -884,7 +960,7 @@ input[type="email"]::placeholder {
 }
 
 .hotel-filter-price {
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
