--- a/styles/style.css
+++ b/styles/style.css
@@ -708,7 +708,7 @@ input[type="email"]::placeholder {
   width: 440px;
   border-radius: 4px;
   box-sizing: border-box;
-  border: 3px solid #fff;
+  border: 3px solid #f2f2f2;
 }
 
 .modal-form input:focus {
@@ -724,10 +724,13 @@ input[type="email"]::placeholder {
 
 .hotel-guests-list {
   display: flex;
+  justify-content: space-between;
 }
 
 .hotel-guests-item {
   display: flex;
+  align-items: center;
+  column-gap: 46px;
 }
 
 .hotel-guests-item-wrapper {
@@ -738,6 +741,40 @@ input[type="email"]::placeholder {
 
 .hotel-guests-item-wrapper button {
   padding: 14px 10px;
+  border: none;
+  background-color: #f2f2f2;
+  position: relative;
+  cursor: pointer;
+}
+
+.minus {
+  border-radius: 4px 0 0 4px;
+}
+
+.minus::before {
+  content: "";
+  display: block;
+  width: 14px;
+  height: 2px;
+  background-image: url(../images/minus.svg);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.plus {
+  border-radius: 0 4px 4px 0;
+}
+
+ .plus::before{
+  content: "";
+  display: block;
+  width: 14px;
+  height: 14px;
+  background-image: url(../images/plus.svg);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .guests {
@@ -747,6 +784,7 @@ input[type="email"]::placeholder {
   font-style: normal;
   font-weight: 700;
   color: #000;
+  text-align: center;
   background-color: #f2f2f2;
   outline: none;
   padding: 14px 10px;
@@ -755,7 +793,64 @@ input[type="email"]::placeholder {
 
   border-radius: 4px;
   box-sizing: border-box;
-  border: 3px solid #fff;
+  border: 3px solid #f2f2f2;
+}
+
+/* Иконка info */
+.label-wrapper {
+  display: flex;
+  column-gap: 10px;
+}
+
+.info {
+  width: 26px;
+  height: 26px;
+  background-color: #83B3D3;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.info-icon-top {
+  height: 2px;
+  width: 2px;
+  background-color: #fff;
+  margin: 0 0 1px 0;
+}
+
+.info-icon-bottom {
+  width: 2px;
+  height: 9px;
+  background-color: #fff;
+}
+
+.modal-form-button {
+  text-align: center;
+  font-size: 20px;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #83B3D3;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.modal-form-button:hover,
+.modal-form-button:focus {
+  background-color: #68A2CA
+}
+
+
+.modal-form-button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 /* main (catalog) */
