--- a/styles/style.css
+++ b/styles/style.css
@@ -102,23 +102,16 @@ main {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-
   min-height: 64px;
-
   display: flex;
-
   position: relative;
-
-  z-index: 1;
-
-
 }
 
 .main-logo-link {
   margin: 0;
   position: absolute;
   left: 70px;
-
+  z-index: 1;
 }
 
 .main-logo {
@@ -618,15 +611,19 @@ input[type="email"]::placeholder {
   height: 100%;
   background-color: rgba(242, 242, 242, 0.80);
   box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+  z-index: 1;
+}
+
+.modal-container-close {
+  display: none;
 }
 
 .modal {
   position: relative;
-  margin: auto;
+  margin: 396px auto auto;
   padding: 64px 70px;
   background-color: #fff;
   border-radius: 30px;
-  /* display: flex; */
   box-sizing: border-box;
 }
 
@@ -671,6 +668,7 @@ input[type="email"]::placeholder {
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
+  margin: 0 0 64px 0;
 }
 
 /* форма в модальном окне */
@@ -719,12 +717,14 @@ input[type="email"]::placeholder {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 0 48px 0;
 }
 
 
 .hotel-guests-list {
   display: flex;
   justify-content: space-between;
+  margin: 0 0 48px 0;
 }
 
 .hotel-guests-item {
@@ -737,14 +737,35 @@ input[type="email"]::placeholder {
   display: grid;
   width: 110px;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 48px;
 }
 
-.hotel-guests-item-wrapper button {
+
+/* Кнопки плюс и минус */
+.hotel-guests-item-button {
   padding: 14px 10px;
-  border: none;
+  border: 3px solid #f2f2f2;
   background-color: #f2f2f2;
   position: relative;
   cursor: pointer;
+  outline: none;
+}
+
+
+.hotel-guests-item-button:hover {
+  background-color: #E6E6E6;
+  border-color: #E6E6E6;
+}
+
+.hotel-guests-item-button:focus {
+  border: 3px solid #83B3D3;
+  outline: none;
+  background-color: #e6e6e6;
+}
+
+.hotel-guests-item-button:active {
+  border: 3px solid #fff;
+  opacity: 0.3;
 }
 
 .minus {
@@ -811,6 +832,7 @@ input[type="email"]::placeholder {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .info-icon-top {
@@ -824,6 +846,25 @@ input[type="email"]::placeholder {
   width: 2px;
   height: 9px;
   background-color: #fff;
+}
+
+/* Описание в info */
+.info-description {
+  width: 256px;
+  padding: 15px 18px 18px 22px;
+  border-radius: 10px;
+  background-color: #333;
+  position: absolute;
+  bottom: -15px;
+}
+
+.info-description-text {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #fff;
+  text-transform: none;
+  margin: 0;
 }
 
 .modal-form-button {
@@ -841,6 +882,7 @@ input[type="email"]::placeholder {
   border: none;
   border-radius: 10px;
   cursor: pointer;
+  outline: none;
 }
 
 .modal-form-button:hover,
