--- a/styles/style.css
+++ b/styles/style.css
@@ -572,12 +572,12 @@ input[type="email"]::placeholder {
   padding: 10px 10px;
 }
 
-.social-link:hover svg path,
-.social-link:focus svg path {
+.social-link:hover path,
+.social-link:focus path {
   fill: #68A2CA;
 }
 
-.social-link:active svg path {
+.social-link:active path {
   fill: #68A2CA;
   opacity: 0.3;
 }
@@ -616,12 +616,12 @@ input[type="email"]::placeholder {
   outline: none;
 }
 
-.htmlacademy-link:hover svg path,
-.htmlacademy-link:focus svg path {
+.htmlacademy-link:hover  path,
+.htmlacademy-link:focus  path {
   fill: #756157;
 }
 
-.htmlacademy-link:active svg path {
+.htmlacademy-link:active path {
   fill: #756157;
   opacity: 0.3;
 }
