--- a/styles/style.css
+++ b/styles/style.css
@@ -1327,7 +1327,7 @@ input[type="email"]::placeholder {
 /* select */
 
 .select-control {
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   color: #333;
@@ -1572,13 +1572,13 @@ input[type="email"]::placeholder {
 
 }
 
-.pagination-list li:first-child a {
+.pagination-item:first-child a {
   color: #000;
   background-color: #f2f2f2;
 }
 
-.pagination-list li:first-child a:hover,
-.pagination-list li:first-child a:focus {
+.pagination-item:first-child a:hover,
+.pagination-item:first-child a:focus {
   background-color: #f2f2f2;
 }
 
