--- a/styles/style.css
+++ b/styles/style.css
@@ -120,17 +120,19 @@ body {
 }
 
 .navigation {
-
   display: flex;
   justify-content: space-between;
   width: 100%;
+  padding: 0 70px;
 }
 
 .navigation-list {
   list-style: none;
   padding: 0;
-  margin: 0 0 0 238px;
+  margin: 0 0 0 168px;
   display: flex;
+  flex-wrap: wrap;
+  max-width: 500px;
 }
 
 .navigation-list-item {
@@ -148,18 +150,23 @@ body {
   box-sizing: border-box;
 }
 
+.navigation-user-wrapper {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+}
+
 .navigation-user-list  {
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-
   list-style: none;
-
   padding: 0;
-  margin: 0 70px 0 0;
   height: 100%;
   display: flex;
+  flex-wrap: wrap;
+  max-width: 200px;
 }
 
 .navigation-user-list-item {
@@ -167,7 +174,10 @@ body {
   align-items: center;
   justify-content: center;
   min-width: 44px;
+  position: relative;
+}
 
+.navigation-user-link {
   position: relative;
 }
 
@@ -178,11 +188,9 @@ body {
   justify-content: center;
   width: 20px;
   height: 20px;
-
   position: absolute;
-  left: 19px;
-  top: 12px;
-
+  left: 40%;
+  top: -51%;
   font-weight: 400;
   font-size: 10px;
   line-height: 10px;
@@ -196,11 +204,11 @@ body {
   vertical-align: middle;
 }
 
-.navigation-link-button {
+.navigation-user-button {
   color: #fff;
   padding: 8px 34px;
-  max-width: 160px;
-  margin-left: 20px;
+  min-width: 160px;
+  flex-shrink: 0;
 }
 
 
