--- a/styles/style.css
+++ b/styles/style.css
@@ -255,8 +255,9 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  padding: 68px 50px 0 50px;
-  margin: 0 0 26px 0;
+  width: 627px;
+  padding: 68px 0 0 0;
+  margin: 0 auto 26px auto;
 }
 
 .advantages-second-p {
@@ -264,8 +265,8 @@ body {
   line-height: 26px;
   text-align: center;
   color: #333;
-  padding: 0 50px 69px 50px;
-  margin: 0 0 21px 0;
+  padding: 0 0 69px 0;
+  margin: 0 auto 21px auto;
 }
 
 .advantages-list {
@@ -279,14 +280,14 @@ body {
 .advantages-list-item {
   min-width: 400px;
   min-height: 385px;
-
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .advantages-list-item-wrapper {
-  min-width: 400px;
+  width: 230px;
+  padding: 103px 85px;
 }
 
 .advantages-list-item h3 {
@@ -319,12 +320,16 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333;
-  max-width: 232px;
+  width: 232px;
   margin: 0 auto;
 }
 
 .white-text {
   color: #fff;
+}
+
+.advantages-list-item-img {
+  height: 100%;
 }
 
 .advantages-list li:nth-child(even) {
@@ -338,7 +343,11 @@ body {
 .advantages-list li:first-child,
 .advantages-list li:last-child {
   background-color: #82b3d3;
+}
 
+.advantages-list-item:first-child .advantages-list-item-wrapper,
+.advantages-list-item:last-child .advantages-list-item-wrapper {
+  padding: 102px 85px;
 }
 
 .advantages-list li:last-child {
@@ -347,16 +356,13 @@ body {
 
 /* section .recomendations */
 
-.recomendations {
-  margin-bottom: 96px;
-}
-
 .recomendations-first-p {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
   margin: 0 auto 20px auto;
+  width: 505px;
 }
 
 .recomendations-second-p {
@@ -394,6 +400,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
+  width: 230px;
   margin: 0 auto 30px auto;
 }
 
@@ -428,15 +435,14 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333;
-  max-width: 230px;
-
+  width: 230px;
   margin: 0 auto 30px auto;
 }
 
 /* section .find-hotel */
 
 .find-hotel {
-  margin: 0 0 96px 0;
+  padding: 96px 304px;
 }
 
 .find-hotel-first-p {
@@ -444,7 +450,7 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
 }
 
 .find-hotel-second-p {
@@ -464,7 +470,8 @@ body {
 /* section .mailing */
 
 .mailing {
-  margin-bottom: 45px;
+  margin-bottom: 42px;
+  padding: 95px 258px 104px 258px;
 }
 
 .mailing-index {
@@ -473,7 +480,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
-  margin-bottom: 43px;
+  margin-bottom: 42px;
 }
 
 .mailing-first-p {
@@ -482,7 +489,6 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
-  padding-top: 95px;
   margin: 0 0 22px 0;
 }
 
@@ -493,14 +499,10 @@ body {
 }
 
 .mailing-list {
-  padding: 0 0 101px 0;
   display: flex;
   justify-content: center;
 }
 
-.mailing-list-index {
-  padding: 0 0 103px 0;
-}
 
 .mailing-list input[type="email"] {
   display: flex;
@@ -557,7 +559,7 @@ input[type="email"]::placeholder {
 /* Соцсети */
 
 .social {
-  min-width: 142px;
+  width: 142px;
 }
 
 .social-list {
@@ -565,7 +567,7 @@ input[type="email"]::placeholder {
   padding: 0;
   margin: 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 
 }
 
